k8s-ssl/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - users.harjukallio.club
      secretName: harjukallio-club
  rules:
    - host: users.harjukallio.club
      http:
        paths:
          - path: /
            backend:
              serviceName: authentication-service-frontend-cluster-ip-service
              servicePort: 3001
          - path: /api/
            backend:
              serviceName: authentication-service-backend-proxy-cluster-ip-service
              servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-module-federation
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: users.harjukallio.club
      http:
        paths:
          - path: /main_app_mf(/|$)(.*)
            backend:
              serviceName: frontend-cluster-ip-service
              servicePort: 3001
